--- a/settings.json
+++ b/settings.json
@@ -7,13 +7,23 @@
 // custom settings, run the `open default settings` command
 // from the command palette or from `Zed` application menu.
 {
-  "theme": "Github Dark",
-  "ui_font_size": 16,
-  "buffer_font_size": 16,
+  "theme": "Gruvbox Dark Hard",
+  "ui_font_size": 14,
+  "buffer_font_size": 14,
   "vim_mode": true,
   "autosave": "on_focus_change",
   "features": {
     "copilot": false
+  },
+  "languages": {
+    "JavaScript": {
+      "format_on_save": {
+        "external": {
+          "command": "prettier",
+          "arguments": ["--stdin-filepath", "{buffer_path}"]
+        }
+      }
+    }
   },
   "formatter": {
     "code_actions": {
