--- a/settings.json
+++ b/settings.json
@@ -1,14 +1,9 @@
-// Zed settings
-//
-// For information on how to configure Zed, see the Zed
-// documentation: https://zed.dev/docs/configuring-zed
-//
-// To see all of Zed's default settings without changing your
-// custom settings, run the `open default settings` command
-// from the command palette or from `Zed` application menu.
 {
   "theme": "Gruvbox Dark Hard",
   "ui_font_size": 14,
+  "buffer_font_features": {
+    "calt": true
+  },
   "buffer_font_size": 14,
   "vim_mode": true,
   "autosave": "on_focus_change",
@@ -23,6 +18,22 @@
           "arguments": ["--stdin-filepath", "{buffer_path}"]
         }
       }
+    },
+    "Typescript": {
+      "format_on_save": {
+        "external": {
+          "command": "prettier",
+          "arguments": ["--stdin-filepath", "{buffer_path}"]
+        }
+      }
+    },
+    "JSON": {
+      "format_on_save": {
+        "external": {
+          "command": "prettier",
+          "arguments": ["--stdin-filepath", "{buffer_path}"]
+        }
+      }
     }
   },
   "formatter": {
@@ -30,9 +41,10 @@
       "source.fixAll.eslint": true
     }
   },
+  "current_line_highlight": "gutter",
   "centered_layout": {
-    "left_padding": 0.2,
-    "right_padding": 0.2
+    "left_padding": 0.1,
+    "right_padding": 0.1
   },
   "tab_bar": {
     "show": false
@@ -56,5 +68,9 @@
   ],
   "vim": {
     "use_system_clipboard": "never"
-  }
+  },
+  "inline_completions": {
+    "disabled_globs": [".env"]
+  },
+  "show_nav_history_buttons": false
 }
