--- a/settings.json
+++ b/settings.json
@@ -34,6 +34,14 @@
         }
       }
     },
+    "Astro": {
+      "format_on_save": {
+        "external": {
+          "command": "prettier",
+          "arguments": ["--stdin-filepath", "{buffer_path}"]
+        }
+      }
+    },
     "JSON": {
       "format_on_save": {
         "external": {
