--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,33 @@
 {
+  "file_scan_exclusions": [
+    "**/.git",
+    "**/.svn",
+    "**/.hg",
+    "**/CVS",
+    "**/.DS_Store",
+    "**/Thumbs.db",
+    "**/.classpath",
+    "**/.settings",
+    "**/*yarn*",
+    "packages/med-pro",
+    "packages/mobile",
+    "packages/nosework",
+    "packages/home",
+    "packages/infra",
+    "packages/agitest",
+    "packages/hoopers",
+    // "packages/zawody",
+    "packages/socket"
+  ],
+  "context_servers": {
+    "mcp-server-context7": {
+      "source": "extension",
+      "enabled": true,
+      "settings": {
+        "default_minimum_tokens": "10000"
+      }
+    }
+  },
   "agent": {
     "notify_when_agent_waiting": "never",
     "default_profile": "write",
@@ -6,13 +35,13 @@
     "always_allow_tool_actions": true,
     "default_model": {
       "provider": "zed.dev",
-      "model": "claude-sonnet-4",
-      "temperature": 0.1
-    },
-    "version": "2"
+      "model": "claude-sonnet-4"
+    }
   },
+  "buffer_font_size": 14,
   "show_completions_on_input": false,
-  "ui_font_size": 14,
+  "fast_scroll_sensitivity": 0,
+  "ui_font_size": 12,
   "buffer_font_features": {
     "calt": true
   },
@@ -21,8 +50,7 @@
   "vim_mode": true,
   "autosave": "on_focus_change",
   "features": {
-    "edit_prediction_provider": "zed",
-    "copilot": false
+    "edit_prediction_provider": "zed"
   },
   "languages": {
     "JavaScript": {
@@ -34,10 +62,6 @@
       "format_on_save": "on"
     },
     "TSX": {
-      "formatter": ["prettier"],
-      "format_on_save": "on"
-    },
-    "JSX": {
       "formatter": ["prettier"],
       "format_on_save": "on"
     },
@@ -64,24 +88,12 @@
   "preview_tabs": {
     "enabled": false
   },
-  "file_scan_exclusions": [
-    "**/.git",
-    "**/.svn",
-    "**/.hg",
-    "**/CVS",
-    "**/.DS_Store",
-    "**/Thumbs.db",
-    "**/.classpath",
-    "**/.settings",
-    "**/*yarn*"
-  ],
   "vim": {
     "use_system_clipboard": "never"
   },
   "edit_predictions": {
     "disabled_globs": [".env"]
   },
-  "show_nav_history_buttons": false,
   "outline_panel": {
     "dock": "right"
   },
@@ -90,7 +102,7 @@
   },
   "terminal": {
     "toolbar": {
-      "title": false
+      "breadcrumbs": true
     },
     "dock": "bottom"
   },
@@ -99,7 +111,7 @@
   },
   "format_on_save": "on",
   "theme": {
-    "mode": "light",
+    "mode": "dark",
     "dark": "Ayu Mirage",
     "light": "Fleet Light"
   }
