--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,5 @@
 {
+  "icon_theme": "Serendipity Icons",
   "file_scan_exclusions": [
     "**/.git",
     "**/.svn",
@@ -9,16 +10,20 @@
     "**/.classpath",
     "**/.settings",
     "**/*yarn*",
-    "packages/med-pro",
-    "packages/mobile",
-    "packages/nosework",
-    "packages/home",
-    "packages/infra",
-    "packages/agitest",
-    "packages/hoopers",
+    "packages/zawody/server.js"
+    // "packages/med-pro*",
+    // "packages/mobile",
     // "packages/zawody",
-    "packages/socket"
+    // "packages/store",
+    // "packages/nosework",
+    // "packages/home",
+    // "packages/infra",
+    // "packages/agitest",
+    // "packages/hoopers",
+    // "packages/fds",
+    // "packages/socket"
   ],
+
   "context_servers": {
     "mcp-server-context7": {
       "source": "extension",
@@ -28,18 +33,59 @@
       }
     }
   },
+  "agent_font_size": 13,
   "agent": {
-    "notify_when_agent_waiting": "never",
-    "default_profile": "write",
-    "play_sound_when_agent_done": true,
-    "always_allow_tool_actions": true,
     "default_model": {
       "provider": "zed.dev",
       "model": "claude-sonnet-4"
+    },
+    "enabled": true,
+    "notify_when_agent_waiting": "never",
+    "default_profile": "write",
+    "play_sound_when_agent_done": true,
+    "always_allow_tool_actions": true
+  },
+  "language_models": {
+    "ollama": {
+      // "api_url": "http://192.168.0.118:11434",
+      "available_models": [
+        {
+          "name": "devstral-8k",
+          "display_name": "local",
+          "max_tokens": 32768,
+          "supports_tools": true
+        }
+        // {
+        //   "name": "llama3.1:8b",
+        //   "display_name": "Local Llama 3.1 8B",
+        //   "max_tokens": 128000,
+        //   "supports_tools": true
+        // },
+        // {
+        //   "name": "mistral-nemo",
+        //   "display_name": "Local Mistral Nemo 12B",
+        //   "max_tokens": 128000,
+        //   "supports_tools": true
+        // },
+        // {
+        //   "name": "hhao/qwen2.5-coder-tools:3b",
+        //   "display_name": "Local Qwen 2.5 Coder Tools 3B",
+        //   "max_tokens": 32768,
+        //   "supports_tools": true
+        // },
+        // {
+        //   "name": "nchapman/ministral-8b-instruct-2410",
+        //   "display_name": "Local Mistral 8B Instruct 2410",
+        //   "max_tokens": 128000,
+        //   "supports_tools": true
+        // }
+      ]
     }
   },
   "buffer_font_size": 14,
-  "show_completions_on_input": false,
+  "inline_code_actions": false,
+  "show_completions_on_input": true,
+  "show_edit_predictions": false,
   "fast_scroll_sensitivity": 0,
   "ui_font_size": 12,
   "buffer_font_features": {
@@ -101,10 +147,12 @@
     "enabled": false
   },
   "terminal": {
+    "keep_selection_on_copy": false,
     "toolbar": {
-      "breadcrumbs": true
+      "breadcrumbs": false
     },
-    "dock": "bottom"
+    "dock": "bottom",
+    "font_size": 12
   },
   "minimap": {
     "show": "never"
@@ -112,7 +160,8 @@
   "format_on_save": "on",
   "theme": {
     "mode": "dark",
-    "dark": "Ayu Mirage",
+    "dark": "Zen Dark",
     "light": "Fleet Light"
-  }
+  },
+  "remove_trailing_whitespace_on_save": true
 }
