--- a/settings_backup.json
+++ b/settings_backup.json
@@ -1,17 +1,78 @@
 {
+  "file_scan_exclusions": [
+    "**/.git",
+    "**/.svn",
+    "**/.hg",
+    "**/CVS",
+    "**/.DS_Store",
+    "**/Thumbs.db",
+    "**/.classpath",
+    "**/.settings",
+    "**/*yarn*",
+    "packages/med-pro*",
+    "packages/mobile",
+    "packages/zawody",
+    "packages/nosework",
+    "packages/home",
+    "packages/infra",
+    "packages/agitest",
+    // "packages/hoopers",
+    "packages/socket"
+  ],
+  "context_servers": {
+    "mcp-server-context7": {
+      "source": "extension",
+      "enabled": true,
+      "settings": {
+        "default_minimum_tokens": "10000"
+      }
+    }
+  },
   "agent": {
+    "default_model": {
+      "provider": "zed.dev",
+      "model": "claude-opus-4"
+    },
+    "enabled": true,
     "notify_when_agent_waiting": "never",
     "default_profile": "write",
     "play_sound_when_agent_done": true,
-    "always_allow_tool_actions": true,
-    "default_model": {
-      "provider": "copilot_chat",
-      "model": "gpt-4.1",
-      "temperature": 0.1
-    },
-    "version": "2"
+    "always_allow_tool_actions": true
   },
+  // "language_models": {
+  //   "ollama": {
+  //     "api_url": "http://192.168.0.118:11434",
+  //     "available_models": [
+  //       {
+  //         "name": "llama3.1:8b",
+  //         "display_name": "Local Llama 3.1 8B",
+  //         "max_tokens": 128000,
+  //         "supports_tools": true
+  //       },
+  //       {
+  //         "name": "mistral-nemo",
+  //         "display_name": "Local Mistral Nemo 12B",
+  //         "max_tokens": 128000,
+  //         "supports_tools": true
+  //       },
+  //       {
+  //         "name": "hhao/qwen2.5-coder-tools:3b",
+  //         "display_name": "Local Qwen 2.5 Coder Tools 3B",
+  //         "max_tokens": 32768,
+  //         "supports_tools": true
+  //       },
+  //       {
+  //         "name": "nchapman/ministral-8b-instruct-2410",
+  //         "display_name": "Local Mistral 8B Instruct 2410",
+  //         "max_tokens": 128000,
+  //         "supports_tools": true
+  //       }
+  //     ]
+  //   }
+  // },
+  "buffer_font_size": 14,
   "show_completions_on_input": false,
+  "fast_scroll_sensitivity": 0,
   "ui_font_size": 14,
   "buffer_font_features": {
     "calt": true
@@ -21,8 +82,7 @@
   "vim_mode": true,
   "autosave": "on_focus_change",
   "features": {
-    "edit_prediction_provider": "zed",
-    "copilot": false
+    "edit_prediction_provider": null
   },
   "languages": {
     "JavaScript": {
@@ -34,10 +94,6 @@
       "format_on_save": "on"
     },
     "TSX": {
-      "formatter": ["prettier"],
-      "format_on_save": "on"
-    },
-    "JSX": {
       "formatter": ["prettier"],
       "format_on_save": "on"
     },
@@ -64,24 +120,12 @@
   "preview_tabs": {
     "enabled": false
   },
-  "file_scan_exclusions": [
-    "**/.git",
-    "**/.svn",
-    "**/.hg",
-    "**/CVS",
-    "**/.DS_Store",
-    "**/Thumbs.db",
-    "**/.classpath",
-    "**/.settings",
-    "**/*yarn*"
-  ],
   "vim": {
     "use_system_clipboard": "never"
   },
   "edit_predictions": {
     "disabled_globs": [".env"]
   },
-  "show_nav_history_buttons": false,
   "outline_panel": {
     "dock": "right"
   },
@@ -90,7 +134,7 @@
   },
   "terminal": {
     "toolbar": {
-      "title": false
+      "breadcrumbs": true
     },
     "dock": "bottom"
   },
@@ -102,5 +146,6 @@
     "mode": "dark",
     "dark": "Ayu Mirage",
     "light": "Fleet Light"
-  }
+  },
+  "show_inline_completions": false
 }
