--- a/settings_backup.json
+++ b/settings_backup.json
@@ -1,5 +1,4 @@
 {
-  "colorize_brackets": true,
   "icon_theme": "Zed (Default)",
   "file_scan_exclusions": [
     "**/.git",
@@ -11,20 +10,17 @@
     "**/.classpath",
     "**/.settings",
     "**/*yarn*",
-    "**/node_modules",
-    "**/services/jira",
-    "ava.go",
-    // "**/services/chatgpt",
-    // "templates",
+    "templates",
     // "client",
-    // "./services",
-    // "server",
-    // "infra",
+    "./services",
+    "server",
+    "infra",
     ".*"
   ],
 
   "context_servers": {
     "mcp-server-context7": {
+      "source": "extension",
       "enabled": true,
       "settings": {
         "default_minimum_tokens": "10000"
@@ -42,10 +38,43 @@
     "play_sound_when_agent_done": true,
     "always_allow_tool_actions": true
   },
+  // "language_models": {
+  //   "ollama": {
+  //     "api_url": "http://192.168.0.118:11434",
+  //     "available_models": [
+  //       {
+  //         "name": "llama3.1:8b",
+  //         "display_name": "Local Llama 3.1 8B",
+  //         "max_tokens": 128000,
+  //         "supports_tools": true
+  //       },
+  //       {
+  //         "name": "mistral-nemo",
+  //         "display_name": "Local Mistral Nemo 12B",
+  //         "max_tokens": 128000,
+  //         "supports_tools": true
+  //       },
+  //       {
+  //         "name": "hhao/qwen2.5-coder-tools:3b",
+  //         "display_name": "Local Qwen 2.5 Coder Tools 3B",
+  //         "max_tokens": 32768,
+  //         "supports_tools": true
+  //       },
+  //       {
+  //         "name": "nchapman/ministral-8b-instruct-2410",
+  //         "display_name": "Local Mistral 8B Instruct 2410",
+  //         "max_tokens": 128000,
+  //         "supports_tools": true
+  //       }
+  //     ]
+  //   }
+  // },
+  // "buffer_font_size": 14,
   "inline_code_actions": false,
   "show_completions_on_input": true,
   "show_edit_predictions": false,
   "fast_scroll_sensitivity": 0,
+  // "ui_font_size": 16,
   "buffer_font_features": {
     "calt": true
   },
@@ -61,14 +90,6 @@
           "GOROOT": "/Users/adam/.gvm/gos/go1.25.0",
           "GOPATH": "/Users/adam/.gvm/pkgsets/go1.25.0/global",
           "GO111MODULE": "on"
-        }
-      }
-    },
-    "typescript": {
-      "initialization_options": {
-        "maxTsServerMemory": 8192,
-        "preferences": {
-          "includeCompletionsForModuleExports": false
         }
       }
     }
@@ -146,7 +167,7 @@
   },
   "format_on_save": "on",
   "theme": {
-    "mode": "light",
+    "mode": "dark",
     "dark": "Zen Dark",
     "light": "Zen Light"
   },
