--- a/tasks.json
+++ b/tasks.json
@@ -2,18 +2,19 @@
   {
     "label": "git commit-push",
     "command": "git add --all && git commit -m .. && git push",
-    //"args": [],
-    // Env overrides for the command, will be appended to the terminal's environment from the settings.
-    "env": { "foo": "bar" },
-    // Current working directory to spawn the command into, defaults to current project root.
-    //"cwd": "/path/to/working/directory",
-    // Whether to use a new terminal tab or reuse the existing one to spawn the process, defaults to `false`.
     "use_new_terminal": false,
-    // Whether to allow multiple instances of the same task to be run, or rather wait for the existing ones to finish, defaults to `false`.
-    "allow_concurrent_runs": true,
-    // What to do with the terminal pane and tab, after the command was started:
-    // * `always` — always show the terminal pane, add and focus the corresponding task's tab in it (default)
-    // * `never` — avoid changing current terminal pane focus, but still add/reuse the task's tab there
-    "reveal": "always"
+    "allow_concurrent_runs": false,
+    "reveal": "never",
+    "hide": "always",
+    "show_summary": false
+  },
+  {
+    "label": "switch-theme",
+    "command": "~/.config/zed/switch-theme",
+    "use_new_terminal": false,
+    "allow_concurrent_runs": false,
+    "reveal": "never",
+    "hide": "always",
+    "show_summary": false
   }
 ]
